# poe2-chat-notifier

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  config.ini  notifier.py  package.py  poe2-chat-notifier.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/poe2_chat_notifier/: __main__.py  main.py
